--- a/style.css
+++ b/style.css
@@ -1,24 +1,98 @@
 *{
-    margin: 0;
-    pading: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-
+  box-sizing: border-box;
 }
- .container{
-    text-aling: center;
-    background: white;
- }
- .header{
-    padding-top: 60px;
-    color: black;
-    font-size: 20px;
-    margin:auto;
-    line-height: 50px;
- }
-
- .sub-container{
-    max-width: 50%;
-    margin: auto;
-    padding: 48px 0;
-    display: flex;
- }
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+  text-align: center;
+  border-radius: 30px;
+}
+.formBox>div{
+  text-align: center;
+  border-radius: 30px;
+}
+input[type=submit] {
+  background-color: #4db5f1;
+  color: rgb(22, 21, 21);
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: #c156eb;
+  text-align: center;
+}
+/* Style the container/contact section */ 
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 10px;
+} 
+/* Create two columns that float next to eachother */
+.column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+.footer{
+  text-align: center;
+}
+.formBox {
+  padding: 15px;
+  text-align: center;
+  min-height: 50vh;
+  min-width: 50vw;
+  display: flex;
+  flex-direction: column;
+  background: #f8f8f885;
+  border-radius: 30px;
+  backdrop-filter: blur(10px);
+}
+body{
+  background-image: -webkit-linear-gradient(rgb(91, 143, 241),rgb(233, 104, 233));
+}
+.formbox{
+  text-align: center;
+  column-rule-style: inset;
+}
+body {
+  background-image: linear-gradient(40deg,
+          hsl(216, 58%, 69%) 50%,
+          hsl(231, 61%, 64%) 50%,
+          hsl(256, 78%, 73%) 50%,
+          hsl(271, 80%, 70%) 50%,);              
+  background-repeat: no-repeat;
+  height: 99vh;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Quicksand', sans-serif;
+}
+textarea {
+  border: none;
+  width: 70vw;
+  border-radius: 20px;
+  padding: 10px;
+  outline: none;
+  font-size: 1em;
+}
